--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <nav class="navbar">
             <a href="https://mattrobinsondeveloper.com/" class="active">Home</a>
-            <a href="#services">Services</a>
+            <a href="https://mattrobinsondeveloper.com/#services">Services</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
         </nav>
